[package]
name = "navigator-helper"
version = "0.1.0"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "0.1"
ads1x1x = "0.2"
embedded-hal = "0.2"
linux-embedded-hal = "0.2"
pwm-pca9685 = "0.2"
